--- a/src/components/componies/index.scss
+++ b/src/components/componies/index.scss
@@ -1,6 +1,41 @@
+.navbar {
+   
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        background: #2c3855;
+        box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
+
+
+        .nav_logo {
+            padding-left:10%;
+            padding-top: 0.7%;
+            padding-bottom: 0.7%;;
+            font-size: 1.5rem;
+            font-weight: 600;
+            color: #f3f4f6;
+        }
+
+        img {
+            width: 300px;
+            height: 100px;
+            cursor: pointer;
+        }
+
+        .nav_links {
+            padding-right: 10%;
+            list-style: none;
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+        }
+
+}
+
 .flyCompanies-container {
     display: flex;
-    background: red;
+    background: rgb(255, 255, 255);
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -10,30 +45,39 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        background: white;
+        background: rgb(255, 255, 255);
         margin-top: 30px;
         height: 150px !important;
         width: 1040px;
         padding: 30px;
         margin-bottom: 10px;
+        border-radius: 30px;
+        box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
 
         .flyCompanies-container__box-info-top {
             display: flex;
             flex-direction: column;
             gap: 20px;
+            
+            
 
             .flyCompanies-container__box-info-top-p {
                 cursor: pointer;
                 color: white;
-                background: red;
+                background: rgb(219, 219, 219);
+                border-radius: 10px;
+                margin-top: 30px;
+                
 
                 &:hover {
-                    background: rgb(129, 32, 32);
+                    background: #536aa0;
                 }
             }
 
             .flyCompanies-container__box-info-city {
                 display: flex;
+                margin-top: -8%;
+                
                 gap: 20px;
             }
 
@@ -65,7 +109,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        background: green;
+        background: rgb(255, 255, 255);
         padding: 20px;
         overflow: auto;
         height: 500px;
@@ -82,6 +126,9 @@
                 height: 100px !important;
                 width: 1000px;
                 gap: 20px;
+                box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
+                border-radius: 10px;
+                color: #3d465c;
             }
 
         }
