--- a/src/components/payScreen/index.scss
+++ b/src/components/payScreen/index.scss
@@ -46,7 +46,7 @@
         }
 
         .approvalButton {
-            background-color: #0f2351;
+            background-color: #1646b8;
 
             &:hover {
                 transition: 0.8s;
@@ -78,18 +78,24 @@
             bottom: 100px;
 
             input {
+                height: 30px;
+                width: 250px;
                 border-radius: 20px;
                 border-style: none;
                 outline: none;
+
+                &::placeholder {
+                    color: rgb(117, 117, 117);
+                }
             }
 
             .payScreen-container-cardForm-frontContent-mounth {
                 display: flex;
                 gap: 40px;
 
-                option {
+                select {
                     border-radius: 30px;
-                    border-style: none;
+                    border-style: none !important;
                 }
             }
         }
@@ -115,17 +121,29 @@
             justify-content: flex-start;
             width: 100%;
             height: 40px;
-            gap: 30px;
 
-            .payScreen-container-cardForm-checkBox {
-                position: relative;
-                bottom: 8px;
+            .payScreen-container-cardForm-check-control {
+                display: flex;
+                align-items: center;
+                height: 40px;
+                width: 40px;
             }
 
             p {
-                position: relative;
-                right: 20px;
+                display: flex;
+                justify-content: flex-start;
+                width: 100%;
             }
+
+            .payScreen-container-cardForm-checkBox {
+                position: relative;
+                cursor: pointer;
+                opacity: 999;
+                width: 20px;
+                height: 20px;
+                bottom: 8px;
+            }
+
         }
     }
 
@@ -149,6 +167,7 @@
         .payScreen-card__front-top {
             display: flex;
             width: 100%;
+            color: white;
             align-items: flex-start;
 
             .payScreen-card__front-top__number {
@@ -161,6 +180,10 @@
             flex-direction: column;
             align-items: flex-end;
             width: 100%;
+
+            label {
+                color: white;
+            }
         }
     }
 
@@ -260,6 +283,10 @@
             padding: 5px;
             border-style: none;
             outline: none;
+
+            &::placeholder {
+                color: rgb(149, 149, 149);
+            }
         }
     }
 
@@ -288,7 +315,6 @@
 
         .popup-content__box-pnr {
             display: flex;
-            flex-direction: column;
         }
 
         .popup-content-button {
