--- a/src/components/content/shoppingSummary/index.scss
+++ b/src/components/content/shoppingSummary/index.scss
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
+
 .navbar {
+        font-family: "Poppins", sans-serif;
    
         display: flex;
         align-items: center;
@@ -29,12 +32,14 @@
             display: flex;
             align-items: center;
             gap: 2rem;
+            padding-top: 15px;
         }
 
 }
 
 
 .shoppingSummary-container {
+    font-family: "Poppins", sans-serif;
     display: flex;
     flex-direction: column;
 
