--- a/src/components/payScreen/index.scss
+++ b/src/components/payScreen/index.scss
@@ -1,25 +1,59 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 .payScreen__container-navbar {
-    nav {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 120px;
-        background-color: #1a3a84;
+    font-family: "Poppins", sans-serif;
 
-        img {
-            margin-left: 50px;
-            background: white;
-            width: 300px;
-            height: 100px;
-            cursor: pointer;
-        }
-    }
+    
+        nav {
+            background-color: #2c3855;
+            margin: auto;
+            padding: 2rem 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
+
+
+            .nav_logo {
+                padding-left: 9%;
+                font-size: 1.5rem;
+                font-weight: 600;
+                color: #f3f4f6;
+              }
+              
+              .nav_links {
+                padding-right: 9%;
+                list-style: none;
+                display: flex;
+                align-items: center;
+                gap: 2rem;
+                padding-top: 15px;
+
+                .link a {
+                    font-weight: 500;
+                    color: #f3f4f6;
+                    transition: 0.3s;
+
+                    &:hover {
+                        color: #767268;
+                      }
+                  }
+                  
+                  
+              }
+              
+              
+          }
+          
+          
+         
+    
 
     .payScreen__container-navbar-alt {
         display: flex;
 
         h3 {
-            margin-left: 100px;
+            margin-left: 140px;
+            margin-top: 20px
         }
     }
 }
@@ -29,6 +63,8 @@
 }
 
 .payScreen-container-list {
+    font-family: "Poppins", sans-serif;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,7 +102,8 @@
         padding: 20px;
         color: white;
         border-radius: 40px;
-        background-color: #1a3a84;
+        background-color: #949494;
+        box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.4);
 
         .payScreen-container-cardForm-frontContent {
             display: flex;
@@ -96,6 +133,7 @@
                 select {
                     border-radius: 30px;
                     border-style: none !important;
+                    color: black;
                 }
             }
         }
@@ -153,6 +191,7 @@
         width: 500px;
         height: 300px;
         perspective: 1000px;
+        
     }
 
     .payScreen-card__front,
@@ -192,7 +231,7 @@
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
-        background: rgb(13, 7, 85);
+        background: #2c3855;
         border-radius: 20px;
         padding: 20px;
 
@@ -206,7 +245,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background: rgb(13, 7, 85);
+        background: #2c3855;
         transform: rotateY(180deg);
         border-radius: 20px;
         padding: 20px;
@@ -293,6 +332,8 @@
 }
 
 .toast-container {
+    font-family: "Poppins", sans-serif;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -303,7 +344,7 @@
     width: 500px !important;
     opacity: 2;
     border-radius: 40px;
-    background: rgb(0, 123, 255);
+    background: rgb(44, 56, 85, 0.8);
 
     .popup-content {
         display: flex;
