--- a/src/components/salesScreen/index.scss
+++ b/src/components/salesScreen/index.scss
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
+
 .sales__container-navbar {
+    font-family: "Poppins", sans-serif;
     nav {
         display: flex;
         width: 100%;
