--- a/src/components/salesScreen/secondary.css
+++ b/src/components/salesScreen/secondary.css
@@ -34,6 +34,7 @@ body {
 }
 
 nav {
+  font-family: "Poppins", sans-serif;
   background-color: #2c3855;
   
   margin: auto;
@@ -58,6 +59,7 @@ nav {
   display: flex;
   align-items: center;
   gap: 2rem;
+  padding-top: 15px;
 }
 
 .link a {
@@ -181,6 +183,7 @@ nav {
 
 
 .flight-container {
+  font-family: "Poppins", sans-serif;
   margin: 1rem 10rem;
   height: 10rem;
   display: flex;
