--- a/src/components/salesScreen/third.css
+++ b/src/components/salesScreen/third.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 
 * {
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,6 +13,7 @@ body {
 }
 
 .container {
+   
     max-width: 800px;
     margin: auto;
     padding: 2rem;
