--- a/src/components/content/searchContent/searchItem2/index.scss
+++ b/src/components/content/searchContent/searchItem2/index.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px;
     height: 150px;
 
 
@@ -10,10 +11,8 @@
     .searchItem-two__container-form {
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
-        width: 60%;
-
-       
+        justify-content: space-between;
+        width: 100%;
 
         .searchItem-two__container-inputBox {
             input {
@@ -25,26 +24,44 @@
                 border-bottom: 1px solid black;
                 border-radius: 0;
                 width: 300px;
-                
 
-                &::placeholder{
+
+                &::placeholder {
                     color: rgba(36, 36, 36, 0.7);
                 }
             }
         }
 
+        .searchItem-two__container__ports {
+            display: flex;
+            align-items: flex-start;
+            flex-direction: column;
+            padding: 20px;
+            width: 100%;
 
-        .searchItem-two__container-button{
+            .searchItem-two__container__ports-info {
+                display: flex;
+                gap: 20px;
+
+            }
+
+            .searchItem-two__container__ports-info__firstp {
+                margin-right: 32px;
+            }
+        }
+
+
+        .searchItem-two__container-button {
             margin-right: 60px;
             margin-top: 40px;
             background-color: #2c3855;
             height: 50px;
             width: 180px;
             border-radius: 30px;
-            &:hover{
+
+            &:hover {
                 background-color: #536aa0;
             }
         }
-
     }
 }
