--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
 }
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #eaeaea;
+  border-left: 1px solid #cecece;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #717171;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #717171;
+}
