--- a/src/components/componies/index.scss
+++ b/src/components/componies/index.scss
@@ -43,35 +43,46 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    position: relative;
+    top: 200px;
     font-family: "Poppins", sans-serif;
+    
 
     .flyCompanies-container__box-info {
-        display: flex;
+        display: grid;
         align-items: center;
-        justify-content: space-between;
         background: rgb(255, 255, 255);
         margin-top: 30px;
         height: 150px !important;
-        width: 1040px;
-        padding: 30px;
+        width: 65%;
+        margin: auto;
         margin-bottom: 10px;
-        border-radius: 30px;
-        box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        border: 1px solid rgba(189, 189, 189, 0.347);
+        box-shadow: 1px 1px 20px rgba(154, 154, 154, 0.1);
+        grid-template-rows: 70% 30%;
 
         .flyCompanies-container__box-info-top {
-            display: flex;
+            display: grid;
             flex-direction: column;
-            gap: 20px;
-            
+            width: 100%;
+            padding: 20px;
+            grid-template-columns: 25% 50% 25%;
+            margin: auto;
+            grid-template-areas:             
+                    "A B C"
+                    ". . D";
             
 
             .flyCompanies-container__box-info-top-p {
                 cursor: pointer;
                 color: white;
-                background: rgb(219, 219, 219);
-                border-radius: 10px;
-                margin-top: 30px;
+                grid-area: A;
+                background: rgb(240, 90, 40);
+                padding: 10px;
+                border-radius: 5px;
+                width: 60%;
+                height: auto;
                 
 
                 &:hover {
@@ -80,44 +91,59 @@
             }
 
             .flyCompanies-container__box-info-city {
+                grid-area: B;
+                text-align: center;
                 display: flex;
-                margin-top: -8%;
-                
-                gap: 20px;
+                align-items: center;
+                justify-content: center;
+                gap: 6%;
+
+                .fa-chevron-right{
+                    color: rgb(240, 90, 40);
+                    border: 1px solid rgb(240, 90, 40);
+                    padding: 11px 15px;
+                    border-radius: 100%;
+                }
+
+                h3{
+                    width: 47%;
+                    
+                }
             }
 
 
             .flyCompanies-container__box-info__date {
-                display: flex;
-                gap: 40px;
-
+                display: grid;
+                grid-area: C;
+                text-align: end;
 
                 .flyCompanies-container__box-info__date-depp {
-                    display: flex;
-                    gap: 30px;
+                    display: grid;
+                    font-weight: bold;
                 }
 
                 .flyCompanies-container__box-info__date-return {
                     display: flex;
-                    gap: 30px;
                 }
             }
+            
         }
-
         .flyCompanies-container__box-info-bottom {
-
-            display: flex;
+            text-align: end;
+            padding-right: 20px;
+            float: right;
+            list-style-type: none;
+            height: auto;
         }
+        
     }
 
     .flyCompanies-container-content {
         display: flex;
         align-items: center;
         flex-direction: column;
-        background: rgb(255, 255, 255);
         padding: 20px;
-        overflow: auto;
-        height: 500px;
+        height: auto;
 
         .flyCompanies-container-content-container {
 
@@ -127,14 +153,20 @@
                 justify-content: space-around;
                 cursor: pointer;
                 background: white;
-                margin-top: 30px;
+                margin-top: 15px;
                 height: 100px !important;
                 width: 1000px;
-                gap: 20px;
-                box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
+                gap: 10px;
+                border: 1px solid rgba(189, 189, 189, 0.347);
+                box-shadow: 1px 1px 20px rgba(154, 154, 154, 0.1);
                 border-radius: 10px;
                 color: #3d465c;
+
+                &:hover {
+                    background: rgb(243, 246, 248);
+                }
             }
+            
 
         }
 
