--- a/src/components/content/searchContent/searchItem1/popup/index.scss
+++ b/src/components/content/searchContent/searchItem1/popup/index.scss
@@ -1,68 +1,262 @@
-.passengerpopup-container{
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    align-items: center;
-    left: 630px;
-    width: 320px;
-    background: white;
-    border-radius: 10px;
-    padding: 15px;
+$mainRed: #F05A28;
 
-    button{
-        margin-top: 20px;
-        width: 100px;
-        border-style: none;
-    }
 
-    .passengerpopup-container-p{
-        padding-top: 18px;
-        width: 200px;
-        font-weight: 600;
-    }
-    .passengerpopup-container__plus-icon{
-        cursor: pointer;
-    }
-    .passengerpopup-container__minus-icon{
-        cursor: pointer;
-    }
 
-    .passengerpopup-container__adult{
+@media (max-width: 767px) {
+
+    .passengerpopup-container{
         display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-
-        input{
-            width: 40px;
+        position: fixed;
+        flex-direction: column;
+        text-align: left;
+        left: 5%;
+        top: 400px;
+        width: 90%;
+        background: white;
+        border-radius: 10px;
+        padding: 15px;
+    
+        button{
+            margin-top: 10px;
+            width: 60%;
+            margin-top: 10px !important;
+            margin: auto;
+            background-color: $mainRed;
+            border-style: none;
+            color: white;
+    
+        }
+    
+        .passengerpopup-container-p{
+            padding-top: 18px;
+            width: 200px;
+            font-weight: 600;
+        }
+        .passengerpopup-container__plus-icon{
+            cursor: pointer;
+            transform: scale(1.4);
+        }
+        .passengerpopup-container__minus-icon{
+            cursor: pointer;
+            transform: scale(1.4);
+        }
+    
+        .passengerpopup-container__adult{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
             height: 40px;
-            outline: none;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+                
+            }
+        }
+        .passengerpopup-container__child{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 40px;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+            }
+        }
+        .passengerpopup-container__baby{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 40px;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+            }
+        }
+        .passengerpopup-container__button{
+            border-radius: 5px;
+            background-color: rgb(65, 65, 132);
+            color: white;
         }
     }
-    .passengerpopup-container__child{
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
+}
 
-        input{
-            width: 40px;
+@media (min-width: 768px) and (max-width: 1023px) {
+
+    .passengerpopup-container{
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        text-align: left;
+        left: 40%;
+        width: 50%;
+        background: white;
+        border-radius: 10px;
+        padding: 15px;
+    
+        button{
+            margin-top: 10px;
+            width: 60%;
+            margin-top: 10px !important;
+            margin: auto;
+            background-color: $mainRed;
+            border-style: none;
+            color: white;
+    
+        }
+    
+        .passengerpopup-container-p{
+            padding-top: 18px;
+            width: 200px;
+            font-weight: 600;
+        }
+        .passengerpopup-container__plus-icon{
+            cursor: pointer;
+            transform: scale(1.4);
+        }
+        .passengerpopup-container__minus-icon{
+            cursor: pointer;
+            transform: scale(1.4);
+        }
+    
+        .passengerpopup-container__adult{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
             height: 40px;
-            outline: none;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+                
+            }
+        }
+        .passengerpopup-container__child{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 40px;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+            }
+        }
+        .passengerpopup-container__baby{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 40px;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+            }
+        }
+        .passengerpopup-container__button{
+            border-radius: 5px;
+            background-color: rgb(65, 65, 132);
+            color: white;
         }
     }
-    .passengerpopup-container__baby{
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
+}
 
-        input{
-            width: 40px;
-            height: 40px;
-            outline: none;
+@media (min-width: 1024px) {
+
+    .passengerpopup-container{
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        text-align: left;
+        left: 55%;
+        width: 40%;
+        background: white;
+        border-radius: 10px;
+        padding: 10px;
+    
+        button{
+            margin-top: 10px;
+            width: 60%;
+            margin-top: 10px !important;
+            margin: auto;
+            background-color: $mainRed;
+            border-style: none;
+            color: white;
+    
         }
-    }
-    .passengerpopup-container__button{
-        border-radius: 5px;
-        background-color: rgb(65, 65, 132);
-        color: white;
+    
+        .passengerpopup-container-p{
+            padding-top: 18px;
+            width: 200px;
+            font-weight: 600;
+        }
+        .passengerpopup-container__plus-icon{
+            cursor: pointer;
+            transform: scale(1.4);
+        }
+        .passengerpopup-container__minus-icon{
+            cursor: pointer;
+            transform: scale(1.4);
+        }
+    
+        .passengerpopup-container__adult{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 40px;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+                border-bottom: 0 !important;
+            }
+        }
+        .passengerpopup-container__child{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 40px;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+            }
+        }
+        .passengerpopup-container__baby{
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 40px;
+    
+            input{
+                text-align: center;
+                width: 40px;
+                height: 40px;
+                outline: none;
+            }
+        }
+        .passengerpopup-container__button{
+            border-radius: 5px;
+            background-color: rgb(65, 65, 132);
+            color: white;
+        }
     }
 }
