--- a/src/components/content/searchContent/index.scss
+++ b/src/components/content/searchContent/index.scss
@@ -11,7 +11,7 @@ $mainRed: #F05A28;
         position: relative;
         top: -50px;
         border-radius: 3%;
-        background-color: rgba(255, 255, 255, 0.75);
+        background-color: rgba(255, 255, 255);
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
@@ -222,7 +222,7 @@ $mainRed: #F05A28;
         position: relative;
         bottom: 300px;
         border-radius: 4px;
-        background-color: rgba(255, 255, 255, 0.899);
+        background-color: rgba(255, 255, 255, 0.95);
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
