--- a/src/components/componies/index.scss
+++ b/src/components/componies/index.scss
@@ -264,7 +264,6 @@
             height: 200px !important;
             width: 65%;
             margin: auto;
-            margin-bottom: 10px;
             border-radius: 10px;
             border: 1px solid rgba(189, 189, 189, 0.347);
             box-shadow: 1px 1px 20px rgba(154, 154, 154, 0.1);
@@ -274,31 +273,34 @@
                 display: grid;
                 flex-direction: column;
                 width: 100%;
+                height: 100%;
                 padding: 15px;
                 grid-template-columns: 20% 55% 25%;
                 margin: auto;
                 grid-template-areas:             
-                        "A B C"
-                        "D D D";
+                        "A B C";
                 
+                .flyCompanies-container__box-info-top-div{
 
-                .flyCompanies-container__box-info-top-p {
-                    cursor: pointer;
-                    color: white;
-                    grid-area: A;
-                    background: rgb(240, 90, 40);
-                    padding: 10px 10px 0px 10px;
-                    font-size: 15px;
-                    border-radius: 5px;
-                    width: 80%;
-                    min-height: 55%;
-                    max-height: 65%;
-                    
+                    .flyCompanies-container__box-info-top-p {
+                        cursor: pointer;
+                        color: white;
+                        grid-area: A;
+                        background: rgb(240, 90, 40);
+                        padding: 10px;
+                        font-size: 12px;
+                        border-radius: 5px;
+                        height: auto;
+                        width: 100%;
+                        
 
-                    &:hover {
-                        background: #536aa0;
+                        &:hover {
+                            background: #536aa0;
+                        }
                     }
+                    
                 }
+                    
 
                 .flyCompanies-container__box-info-city {
                     grid-area: B;
@@ -306,7 +308,6 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    gap: 6%;
 
                     .fa-chevron-right{
                         color: rgb(240, 90, 40);
@@ -319,6 +320,7 @@
                     h3{
                         width: 47%;
                         text-align: center;
+                        font-size: 20px;
                     }
                 }
 
