--- a/src/components/content/searchContent/index.scss
+++ b/src/components/content/searchContent/index.scss
@@ -1,116 +1,117 @@
 $widthFull: 100%;
 $mainRed: #F05A28;
-
+$minHeight: 90px;
 
 @media (max-width: 767px) {
-
+    
     .SearchContent-container {
         height: auto;
         width: 90%;
         margin: auto;
         position: relative;
-        justify-content: space-around;
-        display: flex;
-        width: 1000px;
-        padding-bottom: 30px;
-
+        top: -50px;
         border-radius: 3%;
         background-color: rgba(255, 255, 255);
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
         padding-bottom: 20px;
+    
 
-        position: relative;
-        align-items: center;
-        cursor: pointer;
-        color: white;
-        display: flex;
-        width: $widthFull;
-        padding-bottom: 10px;
-
-
-
-
-
-        .SearchContent-container__menu-Item {
-            display: flex;
+        .SearchContent-container__menu {
+            position: relative;
             align-items: center;
+            justify-content: space-around;
+            display: flex;
             width: $widthFull;
-            cursor: pointer;
-            color: white;
+            min-height: $minHeight;
+            margin-bottom: 10px;
+        
+
+            .SearchContent-container__menu-Item {
+                display: flex;
+                align-items: center;
+                width: $widthFull;
+                cursor: pointer;
+                color: white;
+                
+
+                
 
 
 
+                .SearchContent-container__menu-Item__one {
+                    background: rgba(240, 90, 40, 0.901);
+                    width: 250px;
+                    min-height: $minHeight;
+                    border-radius: 10% 0 0 0;
+                    opacity: 0.6;
+                    transition: 0.3s;
+                    padding-top: 5px;
 
-            background: rgba(240, 90, 40, 0.901);
-            width: 250px;
-            height: auto;
-            border-radius: 10% 0 0 0;
-            opacity: 0.6;
-            transition: 0.3s;
-            padding-top: 5px;
+                    &:hover {
+                        background: rgb(239, 105, 60);
+                    }
+                }
 
-            &:hover {
-                background: rgb(239, 105, 60);
+                .SearchContent-container__menu-Item__two {
+                    background: rgba(240, 90, 40, 0.901);
+                    width: 250px;
+                    min-height: $minHeight;
+                    opacity: 0.6;
+                    transition: 0.3s;
+                    padding-top: 5px;
+
+                    &:hover {
+                        background: rgb(239, 105, 60);
+                    }
+                }
+
+                .SearchContent-container__menu-Item__three {
+                    background: rgba(240, 90, 40, 0.901);
+                    width: 250px;
+                    min-height: $minHeight;
+                    opacity: 0.6;
+                    transition: 0.3s;
+                    padding-top: 5px;
+
+                    &:hover {
+                        background: rgb(239, 105, 60);
+                    }
+                }
+
+                .SearchContent-container__menu-Item__four {
+                    background: rgba(240, 90, 40, 0.901);
+                    width: 250px;
+                    min-height: $minHeight;
+                    border-radius: 0 10% 0 0;
+                    opacity: 0.6;
+                    transition: 0.3s;
+                    padding-top: 5px;
+
+                    &:hover {
+                        background: rgb(239, 105, 60);
+                    }
+                }
             }
-        }
 
-        .SearchContent-container__menu-Item__two {
-            background: rgba(240, 90, 40, 0.901);
-            width: 250px;
-            opacity: 0.6;
-            transition: 0.3s;
-            padding-top: 5px;
-
-            &:hover {
-                background: rgb(239, 105, 60);
+            .SearchContent-container__icon {
+                color: rgb(224, 224, 224);
+                font-size: 20px;
             }
-        }
 
-        .SearchContent-container__menu-Item__three {
-            background: rgba(240, 90, 40, 0.901);
-            width: 250px;
-            opacity: 0.6;
-            transition: 0.3s;
-            padding-top: 5px;
 
-            &:hover {
-                background: rgb(239, 105, 60);
-            }
-        }
-
-        .SearchContent-container__menu-Item__four {
-            background: rgba(240, 90, 40, 0.901);
-            width: 250px;
-            border-radius: 0 10% 0 0;
-            opacity: 0.6;
-            transition: 0.3s;
-            padding-top: 5px;
-
-            &:hover {
-                background: rgb(239, 105, 60);
-            }
         }
     }
 
-    .SearchContent-container__icon {
-        color: rgb(224, 224, 224);
-        font-size: 20px;
+    .SearchContent-container-item__active {
+        background-color: red;
+        opacity: 1 !important;
     }
-
-
 }
-
-
-.SearchContent-container-item__active {
-    background-color: red;
-    opacity: 1 !important;
-}
-
 
 @media (min-width: 768px) and (max-width: 1023px) {
-
+    
     .SearchContent-container {
         height: 320px;
         width: 90%;
@@ -122,7 +123,7 @@ $mainRed: #F05A28;
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
-
+    
 
         .SearchContent-container__menu {
             position: relative;
@@ -131,10 +132,10 @@ $mainRed: #F05A28;
             display: flex;
             width: $widthFull;
             padding-bottom: 30px;
-
-
-
-
+            
+            
+            
+        
 
             .SearchContent-container__menu-Item {
                 display: flex;
@@ -142,9 +143,9 @@ $mainRed: #F05A28;
                 width: $widthFull;
                 cursor: pointer;
                 color: white;
+                
 
-
-
+                
 
 
 
@@ -226,8 +227,8 @@ $mainRed: #F05A28;
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
-
-
+      
+    
         .SearchContent-container__menu {
             position: relative;
             align-items: center;
@@ -235,23 +236,23 @@ $mainRed: #F05A28;
             display: flex;
             width: 100%;
             padding-bottom: 20px;
-
-
-
-
-
+            
+            
+            
+           
+    
             .SearchContent-container__menu-Item {
                 display: flex;
                 align-items: center;
                 width: 1000px;
                 cursor: pointer;
                 color: white;
-
-
-
-
-
-
+                
+    
+                
+    
+    
+    
                 .SearchContent-container__menu-Item__one {
                     background: rgba(240, 90, 40, 0.901);
                     width: 250px;
@@ -259,36 +260,36 @@ $mainRed: #F05A28;
                     opacity: 0.6;
                     transition: 0.3s;
                     padding-top: 5px;
-
+    
                     &:hover {
                         background: rgb(239, 105, 60);
                     }
                 }
-
+    
                 .SearchContent-container__menu-Item__two {
                     background: rgba(240, 90, 40, 0.901);
                     width: 250px;
                     opacity: 0.6;
                     transition: 0.3s;
                     padding-top: 5px;
-
+    
                     &:hover {
                         background: rgb(239, 105, 60);
                     }
                 }
-
+    
                 .SearchContent-container__menu-Item__three {
                     background: rgba(240, 90, 40, 0.901);
                     width: 250px;
                     opacity: 0.6;
                     transition: 0.3s;
                     padding-top: 5px;
-
+    
                     &:hover {
                         background: rgb(239, 105, 60);
                     }
                 }
-
+    
                 .SearchContent-container__menu-Item__four {
                     background: rgba(240, 90, 40, 0.901);
                     width: 250px;
@@ -296,22 +297,22 @@ $mainRed: #F05A28;
                     opacity: 0.6;
                     transition: 0.3s;
                     padding-top: 5px;
-
+    
                     &:hover {
                         background: rgb(239, 105, 60);
                     }
                 }
             }
-
+    
             .SearchContent-container__icon {
                 color: rgb(224, 224, 224);
                 font-size: 20px;
             }
-
-
+    
+    
         }
     }
-
+    
     .SearchContent-container-item__active {
         background-color: red;
         opacity: 1 !important;
