--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -92,8 +92,9 @@
 
   .footer {
     background-color: #ffffff;
-    padding: 1rem;
+    padding: 50px;
     font-family: "Poppins", sans-serif;
+    
   
     .footer_container {
       display: grid;
