--- a/src/components/content/searchContent/searchItem1/popup/index.scss
+++ b/src/components/content/searchContent/searchItem1/popup/index.scss
@@ -203,6 +203,9 @@ $mainRed: #F05A28;
             color: white;
     
         }
+        button:hover{
+            background-color: rgb(44, 56, 85);
+        }
     
         .passengerpopup-container-p{
             padding-top: 18px;
