--- a/src/components/payScreen/index.scss
+++ b/src/components/payScreen/index.scss
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
+
+
+
+.payScreen__container{
+    margin-bottom: 90px;
+}
+
 .payScreen__container-navbar {
     font-family: "Poppins", sans-serif;
 
@@ -58,23 +65,45 @@
     }
 }
 
-.payScreen__container-opacity {
-    opacity: 0.2;
-}
 
 .payScreen-container-list {
     font-family: "Poppins", sans-serif;
-
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
 
+    @media (max-width: 767px) {
+        .payScreen-container-box{
+            position: relative;
+            transform: scale(0.6);
+        }
+    
+    }
+    
+    @media (min-width: 768px) and (max-width: 1023px) {
+        .payScreen-container-box{
+            margin-top: 60px;
+            position: relative;
+            transform: scale(0.7);
+        }
+    
+    }
+    
+    @media (min-width: 1024px) {
+        .payScreen-container-box{
+            margin-top: 120px;
+            position: relative;
+            transform: scale(0.7);
+        }
+    
+    }
+    
     .payScreen-container__paySide {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-top: 120px;
+        margin-top: 80px;
         width: 100%;
 
         .payScreen-container-h3 {
@@ -82,28 +111,41 @@
         }
 
         .approvalButton {
-            background-color: #1646b8;
+            background-color: rgb(240, 90, 40);
+            color: white;
 
             &:hover {
                 transition: 0.8s;
-                background-color: #2c57bc;
+                background-color: #2c3855;
             }
         }
 
     }
 
+    @media (max-width: 767px) {
+
+    }
+    
+    @media (min-width: 768px) and (max-width: 1023px) {
+    
+    }
+    
+    @media (min-width: 1024px) {
+    
+    }
     .payScreen-container-cardForm {
         display: flex;
         align-items: center;
         flex-direction: column;
         height: 640px;
         width: 650px;
-        margin-top: 160px;
+        margin-top: 120px;
         padding: 20px;
-        color: white;
-        border-radius: 40px;
-        background-color: #949494;
-        box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.4);
+        color: rgb(69, 69, 69);
+        border-radius: 10px;
+        background-color: #f8f8f8;
+        border: 1px solid rgba(189, 189, 189, 0.347);
+        box-shadow: 1px 1px 20px rgba(154, 154, 154, 0.1);
 
         .payScreen-container-cardForm-frontContent {
             display: flex;
@@ -112,28 +154,50 @@
             gap: 20px;
             position: relative;
             width: 100%;
-            bottom: 100px;
+            bottom: 120px;
+
 
             input {
-                height: 30px;
-                width: 250px;
-                border-radius: 20px;
-                border-style: none;
+                width: 180px;
                 outline: none;
+                border: none;
+                background-color: transparent;
+                color: #000000;
+                background-color: rgb(255, 255, 255);
+                box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
+                padding: 8px;
+                border-radius: 4px;
+                border: 1px solid rgba(189, 189, 189, 0.347);
 
                 &::placeholder {
-                    color: rgb(117, 117, 117);
+                    color: #959696;
                 }
             }
 
             .payScreen-container-cardForm-frontContent-mounth {
                 display: flex;
-                gap: 40px;
+                gap: 20px;
 
                 select {
-                    border-radius: 30px;
+                    width: 70px;
+                    text-align: left;
+                    border-radius: 4px;
                     border-style: none !important;
                     color: black;
+                    border: 1px solid rgba(189, 189, 189, 0.347);
+                    box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
+
+                    option{
+                        background-color: #ffffff !important;
+                    }
+                    option:hover{
+                        background-color: rgb(240, 90, 40) !important;
+                        color: #000000 !important;
+                    }
+                }
+                select::-webkit-scrollbar {
+                    width: 3px !important;
+                    color: rgb(240, 90, 40);
                 }
             }
         }
@@ -147,18 +211,18 @@
             width: 100%;
             bottom: 80px;
 
-            .payScreen-container-box__installment-inputGroup {
+            .payScreen-container-box__installment-inputGroup{
                 display: flex;
                 gap: 30px;
+                
             }
         }
 
         .payScreen-container-cardForm-check {
             display: flex;
             align-items: center;
-            justify-content: flex-start;
             width: 100%;
-            height: 40px;
+            height: auto;
 
             .payScreen-container-cardForm-check-control {
                 display: flex;
@@ -301,7 +365,7 @@
 
     .payScreen-card button {
         padding: 10px 20px;
-        background: rgb(0, 123, 255);
+        background: rgb(240, 90, 40);
         color: white;
         border: none;
         cursor: pointer;
@@ -322,6 +386,9 @@
             padding: 5px;
             border-style: none;
             outline: none;
+            background-color: rgb(255, 255, 255);
+            box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
+            border: 1px solid rgba(189, 189, 189, 0.347);
 
             &::placeholder {
                 color: rgb(149, 149, 149);
@@ -331,69 +398,206 @@
 
 }
 
-.toast-container {
-    font-family: "Poppins", sans-serif;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 40%;
-    left: 35%;
-    height: 300px;
-    width: 500px !important;
-    opacity: 2;
-    border-radius: 40px;
-    background: rgb(44, 56, 85, 0.8);
-
-    .popup-content {
+@media (max-width: 767px) {
+    .toast-container {
+        font-family: "Poppins", sans-serif;
+    
         display: flex;
-        flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        height: 200px;
-        border-radius: 10px;
-
-
-        .popup-content__box-pnr {
+        justify-content: center;
+        position: fixed;
+        top: 40%;
+        margin: auto;
+        transform: scale(0.9);
+        height: 300px;
+        width: 500px !important;
+        opacity: 2;
+        border-radius: 40px;
+        background: rgb(44, 56, 85, 0.8);
+    
+        .popup-content {
             display: flex;
-            justify-content: space-between;
-        }
-
-        .popup-content-button {
-            display: flex;
-            gap: 30px;
-            width: 100%;
-
-            button {
-                border-style: none;
-                color: white;
-                height: 40px;
-                font-size: 10px;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            height: 200px;
+            border-radius: 10px;
+    
+    
+            .popup-content__box-pnr {
+                display: flex;
+                justify-content: space-between;
             }
-
-            .popup-content-button__main {
-                color: white;
-                background: rgb(0, 123, 255);
-
-                &:hover {
-                    background: rgb(36, 141, 252);
+    
+            .popup-content-button {
+                display: flex;
+                gap: 30px;
+                width: 100%;
+    
+                button {
+                    border-style: none;
+                    color: white;
+                    height: 40px;
+                    font-size: 10px;
                 }
-            }
-
-            .popup-content-button__summary {
-
-                color: white;
-                background: rgb(0, 123, 255);
-
-                &:hover {
-                    background: rgb(36, 141, 252);
+    
+                .popup-content-button__main {
+                    color: white;
+                    background: rgb(240, 90, 40);
+    
+                    &:hover {
+                        background: rgb(36, 141, 252);
+                    }
                 }
-
+    
+                .popup-content-button__summary {
+    
+                    color: white;
+                    background: rgb(240, 90, 40);
+    
+                    &:hover {
+                        background: rgb(36, 141, 252);
+                    }
+    
+                }
             }
         }
     }
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .toast-container {
+        font-family: "Poppins", sans-serif;
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 40%;
+        left: 18%;
+        margin: auto;
+        height: 300px;
+        width: 500px !important;
+        opacity: 2;
+        border-radius: 40px;
+        background: rgb(44, 56, 85, 0.8);
+    
+        .popup-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            height: 200px;
+            border-radius: 10px;
+    
+    
+            .popup-content__box-pnr {
+                display: flex;
+                justify-content: space-between;
+            }
+    
+            .popup-content-button {
+                display: flex;
+                gap: 30px;
+                width: 100%;
+    
+                button {
+                    border-style: none;
+                    color: white;
+                    height: 40px;
+                    font-size: 10px;
+                }
+    
+                .popup-content-button__main {
+                    color: white;
+                    background: rgb(240, 90, 40);
+    
+                    &:hover {
+                        background: rgb(36, 141, 252);
+                    }
+                }
+    
+                .popup-content-button__summary {
+    
+                    color: white;
+                    background: rgb(240, 90, 40);
+    
+                    &:hover {
+                        background: rgb(36, 141, 252);
+                    }
+    
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .toast-container {
+        font-family: "Poppins", sans-serif;
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 40%;
+        left: 30%;
+        height: 300px;
+        width: 500px !important;
+        opacity: 2;
+        border-radius: 40px;
+        background: rgb(44, 56, 85, 0.8);
+    
+        .popup-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            height: 200px;
+            border-radius: 10px;
+    
+    
+            .popup-content__box-pnr {
+                display: flex;
+                justify-content: space-between;
+            }
+    
+            .popup-content-button {
+                display: flex;
+                gap: 30px;
+                width: 100%;
+    
+                button {
+                    border-style: none;
+                    color: white;
+                    height: 40px;
+                    font-size: 10px;
+                }
+    
+                .popup-content-button__main {
+                    color: white;
+                    background: rgb(240, 90, 40);
+    
+                    &:hover {
+                        background: rgb(36, 141, 252);
+                    }
+                }
+    
+                .popup-content-button__summary {
+    
+                    color: white;
+                    background: rgb(240, 90, 40);
+    
+                    &:hover {
+                        background: rgb(36, 141, 252);
+                    }
+    
+                }
+            }
+        }
+    }
+}
+
 
 .footer-opacity {
     opacity: 0.2;
